// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UICustomersList backgroundColor should be transparent 1`] = `
<div>
  <section
    class="customers"
  >
    <div
      class="wrapper"
    >
      <div
        class="customers__list"
      >
        <div
          class="customers__logo"
          data-testid="icon-wrapper"
          style="background-color: transparent;"
        >
          <img
            alt="topica"
            data-src="[object Object]"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`UICustomersList should correctly render without data 1`] = `
<div>
  <section
    class="customers"
  >
    <div
      class="wrapper"
    >
      <div
        class="customers__list"
      />
    </div>
  </section>
</div>
`;

exports[`UICustomersList should render correctly 1`] = `
<div>
  <section
    class="customers"
  >
    <div
      class="wrapper"
    >
      <div
        class="customers__list"
      >
        <div
          class="customers__logo"
          data-testid="icon-wrapper"
          style="background-color: rgb(255, 255, 255);"
        >
          <img
            alt="topica"
            data-src="[object Object]"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;
